--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">Firebase Push Notifications</string>
+    <string name="default_notification_channel_id">FCM_CH_01</string>
 
     <!-- TODO: Remove or change this placeholder text -->
+
 
 </resources>
